[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/gui/save_load/save_load.gd" type="Script" id=1]

[node name="SaveLoad" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
margin_bottom = 42.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
custom_constants/separation = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Save" type="Button" parent="Panel/HBoxContainer"]
margin_right = 79.0
margin_bottom = 26.0
text = "Save Level"

[node name="Load" type="Button" parent="Panel/HBoxContainer"]
margin_left = 87.0
margin_right = 167.0
margin_bottom = 26.0
text = "Load Level"

[node name="FileDialog" type="FileDialog" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = 32.0
margin_right = -32.0
margin_bottom = -32.0
filters = PoolStringArray( "*.tscn ; Level files" )
current_dir = "res://USER_LEVELS"
current_path = "res://USER_LEVELS/"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Panel/HBoxContainer/Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/Load" to="." method="_on_Load_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
